할 일 수정 기능 추가

--- a/src/main/resources/templates/todos.html
+++ b/src/main/resources/templates/todos.html
@@ -1,24 +1,76 @@
+<!DOCTYPE html>
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+<head>
+    <meta charset="UTF-8">
+    <title>Todo App</title>
+<!--    <link rel="stylesheet" href="todos.css">-->
+    <style>
+        .sidebar {
+            display: block;
+            align-items: center;
+            background-color:red;
+            margin: 0;
+            padding: 0;
+            width: 440px;
+        }
+        #Category {
+
+        }
+    </style>
+</head>
+<body>
+<div class="sidebar">
+    <h2 id="Category">Categories</h2>
+    <ul>
+        <li>카테고리 1</li>
+        <li>카테고리 2</li>
+    </ul>
+</div>
+<div class="header">
     <h1>Todo App</h1>
-    <form method="post" action="/addTodo"> <!--form태그의 todo에 값을 입력하고 submit버튼을 누르면 /addTodo에게 post형식으로 값을 전달하겠다.-->
-        <input type="text" name="todo"/>
-        <input type="submit" name="Add Todo"/>
+    <form method="post" action="/addTodo">
+        <input type="text" name="todo" placeholder="할 일을 입력하세요" required/>
+        <input type="submit" value="Add Todo"/>
     </form>
-    <hr>
+</div>
+<div class="container">
     <ul>
         <li th:each="todo : ${todos}">
             <span th:text="${todo.todo}"></span>
-<!--        <form id="delete_form" action="" method="post">-->
-            <form th:id="'delete_form_' + ${todo.id}" th:action="'/' + ${todo.id}" method="post">
-<!--            <input type="hidden" name="_method" th:value="delete"/>-->
-                <input type="hidden" name="_method" value="delete"/>
-<!--            <a onclick="if (confirm('정말로 삭제하시겠습니까?')) document.getElementById('delete_form').submit();" class="btn btn-danger">삭제</a>-->
-                <button th:onclick="'if (confirm(\'정말로 삭제하시겠습니까?\')) document.getElementById(\'delete_form_' + ${todo.id} + '\').submit();'" class="btn btn-danger">삭제</button>
-            </form>
+            <div>
+                <a th:href="@{/edit/{id}(id=${todo.id})}" class="edit-button">수정</a>
+                <form th:id="'delete_form_' + ${todo.id}" th:action="'/' + ${todo.id}" method="post" style="display:inline;">
+                    <input type="hidden" name="_method" value="delete"/>
+                    <button type="button" th:onclick="'if (confirm(\'정말로 삭제하시겠습니까?\')) document.getElementById(\'delete_form_' + ${todo.id} + '\').submit();'">삭제</button>
+                </form>
+            </div>
         </li>
     </ul>
+</div>
+</body>
 </html>
-
-<!--테스트-->
+<!--<html lang="ko"-->
+<!--      xmlns:th="http://www.thymeleaf.org"-->
+<!--      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">-->
+<!--    <h1>Todo App</h1>-->
+<!--    <form method="post" action="/addTodo"> &lt;!&ndash;form태그의 todo에 값을 입력하고 submit버튼을 누르면 /addTodo에게 post형식으로 값을 전달하겠다.&ndash;&gt;-->
+<!--        <input type="text" name="todo"/>-->
+<!--        <input type="submit" name="Add Todo"/>-->
+<!--    </form>-->
+<!--    <hr>-->
+<!--    <ul>-->
+<!--        <li th:each="todo : ${todos}">-->
+<!--            <span th:text="${todo.todo}"></span>-->
+<!--&lt;!&ndash;        <form id="delete_form" action="" method="post">&ndash;&gt;-->
+<!--            <form th:id="'delete_form_' + ${todo.id}" th:action="'/' + ${todo.id}" method="post">-->
+<!--&lt;!&ndash;            <input type="hidden" name="_method" th:value="delete"/>&ndash;&gt;-->
+<!--                <input type="hidden" name="_method" value="delete"/>-->
+<!--&lt;!&ndash;            <a onclick="if (confirm('정말로 삭제하시겠습니까?')) document.getElementById('delete_form').submit();" class="btn btn-danger">삭제</a>&ndash;&gt;-->
+<!--                <button th:onclick="'if (confirm(\'정말로 삭제하시겠습니까?\')) document.getElementById(\'delete_form_' + ${todo.id} + '\').submit();'" class="btn btn-danger">삭제</button>-->
+<!--            </form>-->
+<!--            -->
+<!--        </li>-->
+<!--    </ul>-->
+<!--</html>-->
