--- a/src/main/resources/templates/editTodo.html
+++ b/src/main/resources/templates/editTodo.html
@@ -55,7 +55,11 @@
     <form th:action="@{/update/{id}(id=${todo.id})}" method="post">
         <input type="text" name="title" th:value="${todo.title}" placeholder="제목을 입력하세요" required/>
         <input type="text" name="todo" th:value="${todo.todo}" placeholder="할 일을 입력하세요" required/>
-        <input type="text" name="category" th:value="${todo.category}" placeholder="카테고리를 입력하세요"/>
+        <select name="category">
+            <option value="none" hidden>tags</option>
+            <option th:each="category : ${categories}" th:text="${category}"></option>
+        </select>
+<!--        <input type="text" name="category" th:value="${todo.category}" placeholder="카테고리를 입력하세요"/>-->
         <input type="submit" value="Update Todo"/>
     </form>
 </div>
