카테고리 수정, 삭제 기능

--- a/src/main/resources/templates/todos.html
+++ b/src/main/resources/templates/todos.html
@@ -221,7 +221,7 @@
     <div class="sidebar">
         <h2>All Tasks</h2>
         <ul>
-
+<!-- 김홍일 여기야 !!!!-->
             <li th:each="category : ${categories}">
                 <span th:text="${category}"></span>
 <!--                <div class="sidebar_btn">-->
