--- a/src/main/resources/templates/editCategory.html
+++ b/src/main/resources/templates/editCategory.html
@@ -51,35 +51,11 @@
 </head>
 <body>
 <div class="container">
-    <h1>Edit Todo</h1>
-    <form th:action="@{/update/{id}(id=${todo.id})}" method="post">
-        <input type="text" name="title" th:value="${todo.title}" placeholder="제목을 입력하세요" required/>
-        <input type="text" name="todo" th:value="${todo.todo}" placeholder="할 일을 입력하세요" required/>
-        <select name="category">
-            <option value="none" hidden>tags</option>
-            <option th:each="category : ${categories}" th:text="${category.category}"></option>
-        </select>
-<!--        <input type="text" name="category" th:value="${todo.category}" placeholder="카테고리를 입력하세요"/>-->
+    <h1>Edit Category</h1>
+    <form th:action="@{/sidebarUpdate/{id}(id=${category.id})}" method="post">
+        <input type="text" name="category" th:value="${category.category}" placeholder="카테고리를 입력하세요" required/>
         <input type="submit" value="Update Todo"/>
     </form>
 </div>
 </body>
 </html>
-<!--<!DOCTYPE html>-->
-<!--<html lang="ko"-->
-<!--      xmlns:th="http://www.thymeleaf.org"-->
-<!--      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">-->
-<!--<head>-->
-<!--    <meta charset="UTF-8">-->
-<!--    <title>Edit Todo</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div class="container">-->
-<!--    <h1>Edit Todo</h1>-->
-<!--    <form th:action="@{/edit/{id}(id=${todo.id})}" th:object="${todo}" method="post">-->
-<!--        <input type="text" th:field="*{todo}" placeholder="할 일을 입력하세요" required/>-->
-<!--        <input type="submit" value="Update Todo"/>-->
-<!--    </form>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
